# SlotMachineGame

./: .gitignore  CMakeLists.txt  abstractstate.h  button.cpp  button.h  finishstate.cpp  finishstate.h  label.cpp  label.h  main.cpp  readme.md  reel.cpp  reel.h  scorelabel.cpp  scorelabel.h  slotmachinegame.cpp  slotmachinegame.h  spinstate.cpp  spinstate.h  startstate.cpp  startstate.h  symbol.cpp  symbol.h
